# fdf_rust

./: Cargo.toml  README.md
src/: main.rs
static/: crgl.fdf  index.html
