[package]
name = "fdf_rust"
version = "0.1.0"
authors = ["Charles Gleason <charles_gleason@alumni.brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { version = "0.3.20", default-features = false}
